--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 :root {
     --color-bg: #0554f2;
     --color-bg-variant: #28282B;
-    --color-primary: ##029fa6;
+    --color-primary: #029fa6;
     --color-primary-variant: #9bff5e;
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
