--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,10 @@
 }
 
 :root {
-    --color-bg: #0554f2;
-    --color-bg-variant: #28282B;
-    --color-primary: #029fa6;
-    --color-primary-variant: #9bff5e;
+    --color-bg: #1f1f38;
+    --color-bg-variant: #2c2c6c;
+    --color-primary: #4db5ff;
+    --color-primary-variant: rgba(77, 181, 255, 0.4);
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
 
@@ -57,6 +57,7 @@ h1{
 
 section{
     margin-top: 8rem;
+    height: 100vh;
 }
 
 section > h2, section > h5{
