--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -8,7 +8,7 @@
     width: 100%;
     aspect-ratio: 1/1;
     border-radius: 2rem;
-    background: linear-gradient(45deg, transparent, var(--color-primary, transparent));
+    background: linear-gradient(45deg, transparent, var(--color-primary), transparent);
     display: grid;
     place-items: center;
 }
@@ -21,17 +21,17 @@
 }
 
 .about__me-image:hover {
-    transform: rotate(0deg);
+    transform: rotate(0);
 }
 
 .about__cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 1.5rem
+    gap: 1.5rem;
 }
 
 .about__card {
-    background-color: var(--color-bg-variant);
+    background: var(--color-bg-variant);
     border: 1px solid transparent;
     border-radius: 1rem;
     padding: 2rem;
