--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,7 +4,7 @@ header {
     overflow: hidden;
 }
 
-.header__container{
+.header__container {
     text-align: center;
     height: 100%;
     position: relative;
@@ -17,7 +17,7 @@ header {
     justify-content: center;
 }
 
-.header__socials{
+.header__socials {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,17 +28,17 @@ header {
     font-size: 1.75rem;
 }
 
-.header__socials::after{
+.header__socials::after {
     content: "";
     width: 1px;
     height: 2rem;
     background: var(--color-primary);
 }
 
-.me{
+.me {
     background: linear-gradient(var(--color-primary), transparent);
     width: 22rem;
-    height: 38rem;
+    height: 30rem;
     position: absolute;
     left: calc(50% - 11rem);
     margin-top: 4rem;
@@ -47,7 +47,7 @@ header {
     padding: 5rem 1.5rem 1.5rem 1.5rem;
 }
 
-.scroll__down{
+.scroll__down {
     position: absolute;
     right: -2.3rem;
     bottom: 5rem;
@@ -56,18 +56,19 @@ header {
     font-size: 1rem;
 }
 
-@media screen and (max-width: 1024px){
-    header{
-        height: 68vh;
+@media screen and (max-width: 1024px) {
+    header {
+        height: 70vh;
     }
 }
 
-@media screen and (max-width: 600px){
-    header{
+@media screen and (max-width: 600px) {
+    header {
         height: 100vh;
     }
 
-    .header__socials, .scroll__down{
+    .header__socials,
+    .scroll__down {
         display: none;
     }
 }
